--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculadora",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://SirArthurio.github.io/calculadora",
+  "homepage": "https://SirArthurio.github.io/Calculadora-Basica-React",
   "type": "module",
   "scripts": {
     "dev": "vite",
